--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@tarojs/components": "3.6.7",
     "@tarojs/helper": "3.6.7",
     "@tarojs/plugin-framework-react": "3.6.7",
+    "@tarojs/plugin-html": "^3.6.7",
     "@tarojs/plugin-platform-alipay": "3.6.7",
     "@tarojs/plugin-platform-h5": "3.6.7",
     "@tarojs/plugin-platform-jd": "3.6.7",
